<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <me.jfenn.metronome.views.RatioImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="24dp"
            android:text="@string/title_pro_key"
            android:textColor="?android:textColorPrimary"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="4dp"
            android:text="@string/msg_pro_key"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="4dp"
            android:text="@string/msg_pro_key_disclaimer"
            android:textColor="?android:textColorSecondary"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/hideCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_pro_key_hide"
            android:textColor="?android:textColorPrimary"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</ScrollView>